--- a/Bitcoin price/index.html
+++ b/Bitcoin price/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Arrays</title>
+  <title>Bitcoin price</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link href="style.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="javascript.js" ></script>
