--- a/myPortfolio/skills.html
+++ b/myPortfolio/skills.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web developer</title>
+    <title>Juliya Khaliauka - junior front-end developer</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name= "viewport" content = "width=device-width">
+    <meta name= "viewport" content = "width=device-width, initial-scale=1">
+    <meta name="description" content="Portfolio junior front-end developer - Julia Khaliauka">
+    <meta name="author" content="Julia Khaliauka">
+    <meta name="keywords" content="front-end developer,junior front-end developer HTML, HTML5, CSS, CSS3, Java Script,ECMAScript 6, cooder">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Arimo:700|Biryani:400,800|Jaldi" rel="stylesheet">
+ </head>
   <body>
     <div class="appear"></div>
   	<div class="page">
@@ -20,7 +25,7 @@
           </nav>
           <div class="social_media">
             <a href="https://www.linkedin.com/in/juliya-khaliauka-900a94116/" target="_blank" class="in"></a>
-             <a href="#" class="f"></a>
+             <a href="https://github.com/Julia1898/Julia1898.github.io" target="_blank" class="f"></a>
           </div> 
        </div>		 
   	   <div role="main" class="main">
