--- a/Java script/Get current weather/index.html
+++ b/Java script/Get current weather/index.html
@@ -1,41 +1,13 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>Forecast</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<meta name= "viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="javascript.js" ></script>
-</head>
+  <head>
+     <title>Forecast</title>
+     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+     <meta name= "viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+     <link href="style.css" rel="stylesheet" type="text/css"/>
+  </head>
   <body>
-    <div class="wraper">
-  	   <div class="london_weather">
-         <div class="temp"></div>
-         <div class="title"><div class="icon"></div></div> 
-         <div class="clauds"></div> 
-         <hr>
-         <div class="time"></div>
-         <span class="date"></span>
-         <hr>
-         <div class="humidity"></div>
-         <div class="wind"></div>
-         <div class="temp_min"></div>
-         <div class="temp_max"></div>
-       </div>
-       <div class="minsk_weather">
-         <div class="tempMinsk"></div>
-         <div class="titleMinsk"><div class="iconMinsk"></div></div> 
-         <div class="claudsMinsk"></div> 
-         <hr>
-         <div class="timeMinsk"></div>
-         <span class="dateMinsk"></span>
-         <hr>
-         <div class="humidityMinsk"></div>
-         <div class="windMinsk"></div>
-         <div class="temp_minMinsk"></div>
-         <div class="temp_maxMinsk"></div>
-       </div>
-       </div>
-    </div>
+     <div class="wraper"></div>
+     <script type="text/javascript" src="javascript.js"></script>
   </body>
   </html>
