--- a/Java script/Get Bitcoin price/index.html
+++ b/Java script/Get Bitcoin price/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>Bitcoin price</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="javascript.js" ></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-</head>
+  <head>
+    <title>Bitcoin price</title>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <link href="style.css" rel="stylesheet" type="text/css"/>
+  </head>
   <body>
   	<div class="title">Bitcoin price</div>
   	<div class="line"></div>
   	<div class="courseToday">
   		<div class="price">
-  		     <div id="usd">
-  		     	<div class ="simbol">$</div>
-  		     	<div class ="usd"></div>
-  		     </div>
-  		     <div id="gbp">
-  		     	<div class ="simbol">&pound;</div>
-  		     	<div class ="gbp"></div>
-  		     </div>
-  		     <div id="eur">
-  		     	<div class ="simbol">&euro;</div>
-  		     	<div class ="eur"></div>
-  		     </div>
+		     <div id="usd">
+		     	  <div class ="simbol">$</div>
+		      	<div class ="usd"></div>
+		     </div>
+		     <div id="gbp">
+		      	<div class ="simbol">&pound;</div>
+		     	  <div class ="gbp"></div>
+		     </div>
+		     <div id="eur">
+		      	<div class ="simbol">&euro;</div>
+		      	<div class ="eur"></div>
+		     </div>
   		</div>
   		<div class="changing">
   			 <div id="usd_change">
@@ -44,5 +42,8 @@
     	<div class="gbpBlock"></div>
     </div>
     <div id="chart_div" style="width: 750px; height: 450px; margin-left:40px"></div>
+    <script type="text/javascript" src="output.js" ></script>
+    <script type="text/javascript" src="javascript.js" ></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </body>
-  </html>
+</html>
