--- a/Java script/Make a comment/index.html
+++ b/Java script/Make a comment/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
- <head>
+  <head>
     <title>Comments</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
- </head>
- <body>
+  </head>
+  <body>
     <h2>What do you think about penguins?</h2>
     <form>
         <label for="name">Name</label>
@@ -17,6 +17,7 @@
         <button type="submit">Add Comment</button>
     </form>
     <div class="out"></div>
-  <script type="text/javascript" src="index.js"></script>  	
+    <script type="text/javascript" src="show.js"></script>
+    <script type="text/javascript" src="index.js"></script>  	
   </body>
-  </html>
+</html>
