--- a/Java script/World Time/index.html
+++ b/Java script/World Time/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>World Clock</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="javascript.js" ></script>
-</head>
+  <head>
+    <title>World Clock</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+  </head>
   <body>
     <div id ="block">
-  	    <div id ="polosa">
-              <div id="london">
-                   <div id="screen1">
-                         <img id ="hour"src="images/hour.png">
-                         <img  id ="min" src="images/min.png">
-                         <img  id ="sec" src="images/sec.png">
-                   </div>
-              </div>
-              <div id="tokyo">
-                    <div id="screen2">
-                         <img id ="hour1"src="images/hour.png">
-                         <img  id ="min1" src="images/min.png">
-                         <img  id ="sec1" src="images/sec.png">
-                    </div>
-             </div>
-             <div id="newYork">
-                    <div id="screen3">
-                         <img id ="hour2"src="images/hour.png">
-                         <img  id ="min2" src="images/min.png">
-                         <img  id ="sec2" src="images/sec.png">
-                    </div>
-             </div>
-             <div id="moscow">
-                    <div id="screen4">
-                         <img id ="hour3"src="images/hour.png">
-                         <img  id ="min3" src="images/min.png">
-                         <img  id ="sec3" src="images/sec.png">
-                    </div>
-             </div>
-       </div>
+  	  <div id ="polosa">
+        <div id="London">
+          <div id="screenLondon">
+             <img  class ="hour" src="images/hour.png">
+             <img  class ="min" src="images/min.png">
+             <img  class ="sec" src="images/sec.png">
+          </div>
+        </div>
+        <div id="Belarus">
+          <div id="screenBelarus">
+             <img  class ="hour" src="images/hour.png">
+             <img  class ="min" src="images/min.png">
+             <img  class ="sec" src="images/sec.png">
+          </div>
+        </div>
+        <div id="NewYork">
+          <div id="screenNewYork">
+             <img  class ="hour" src="images/hour.png">
+             <img  class ="min" src="images/min.png">
+             <img  class ="sec" src="images/sec.png">
+          </div>
+        </div>
+        <div id="Moscow">
+          <div id="screenMoskow">
+             <img  class ="hour" src="images/hour.png">
+             <img  class ="min" src="images/min.png">
+             <img  class ="sec" src="images/sec.png">
+          </div>
+        </div>
+      </div>
     </div>
+    <script type="text/javascript" src="javascript.js" ></script>
   </body>
-  </html>
+</html>
