--- a/Java script/Piano/index.html
+++ b/Java script/Piano/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>Слайдер</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<link href="animate.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="javascript.js" ></script>
-<script type="text/javascript" src="wow.min.js"></script>
-<script>
-     new WOW().init();
-</script>
-</head>
-
+  <head>
+    <title>Piano</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+  </head>
   <body>
      <div class="keys">
      	<div  data-key = "65" class="key wow bounceInUp">
@@ -51,7 +44,6 @@
      		<span class="sound">tink</span>
      	</div>
      </div>
-
      <audio data-key = "65" src="audio/banjo_A4_very-long_forte_normal.mp3"></audio>
      <audio data-key = "83" src="audio/banjo_A4_very-long_piano_normal.mp3"></audio>
      <audio data-key = "68" src="audio/banjo_A5_very-long_forte_normal.mp3"></audio>
@@ -61,6 +53,6 @@
      <audio data-key = "74" src="audio/banjo_Cs6_very-long_forte_normal.mp3"></audio>
      <audio data-key = "75" src="audio/banjo_Ds5_very-long_piano_normal.mp3"></audio>
      <audio data-key = "76" src="audio/banjo_E4_very-long_piano_normal.mp3"></audio>
-
-  </body>
-  </html>
+     <script type="text/javascript" src="javascript.js"></script>
+   </body>
+</html>
