--- a/Java script/Render/index.html
+++ b/Java script/Render/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Займы</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="dist/style.css">
@@ -47,10 +48,14 @@
 		            		<div class="rd-description__counter">
 		            			<div class="rd-description__counter--rate">0,08 % в день</div>
 		            			<div class="rd-description__counter--amount">
-		            				<span>3 000 - 15 000</span> 
+									<div id ="rd-description__counter--amount" style="display:inline-block">
+										<span id="rd-firstAmount">3 000</span> 
+										- 
+										<span id="rd-secondAmount">15 000</span>
+									</div>
 		            				<i class="fas fa-ruble-sign" style="color:#5f5f5f"></i>
 		            			</div>
-		            			<div class="rd-description__counter--term">до 60 дней</div>
+		            			<div class="rd-description__counter--term">до <span>60</span> дней</div>
 		            			<a href="#" target="_blank" class="rd-selectedItem__button">
 				            		<button class="rd-selectedItem__button--select">Перейти</button>
 				            	</a>
@@ -91,10 +96,14 @@
 		            		<div class="rd-description__counter">
 		            			<div class="rd-description__counter--rate">0,20 % в день</div>
 		            			<div class="rd-description__counter--amount">
-		            				<span>1 000 - 5 000</span>
+									<div id ="rd-description__counter--amount" style="display:inline-block">
+										<span id="rd-firstAmount">1 000</span> 
+										- 
+										<span id="rd-secondAmount">5 000</span>
+									</div>
 		            				<i class="fas fa-ruble-sign" style="color:#5f5f5f"></i>
 		            			</div>
-		            			<div class="rd-description__counter--term">до 21 дня</div>
+		            			<div class="rd-description__counter--term">до <span>21</span> дня</div>
 		            			<a href="#" target="_blank" class="rd-selectedItem__button">
 				            		<button class="rd-selectedItem__button--select">Перейти</button>
 				            	</a>
@@ -131,10 +140,14 @@
 		            		<div class="rd-description__counter">
 		            			<div class="rd-description__counter--rate">0,08 % в день</div>
 		            			<div class="rd-description__counter--amount">
-		            				<span>1 000 - 10 000</span>
+									<div id ="rd-description__counter--amount" style="display:inline-block">
+										<span id="rd-firstAmount">1 000</span> 
+										- 
+										<span id="rd-secondAmount">10 000</span>
+									</div>
 		            				<i class="fas fa-ruble-sign" style="color:#5f5f5f"></i>
 		            			</div>
-		            			<div class="rd-description__counter--term">до 30 дней</div>
+		            			<div class="rd-description__counter--term">до <span>30</span> дней</div>
 		            			<a href="#" target="_blank" class="rd-selectedItem__button">
 				            		<button class="rd-selectedItem__button--select">Перейти</button>
 				            	</a>
@@ -171,10 +184,14 @@
 		            		<div class="rd-description__counter">
 		            			<div class="rd-description__counter--rate">0,00 % в день</div>
 		            			<div class="rd-description__counter--amount">
-		            				<span>5 000 - 40 000</span>
+									<div id ="rd-description__counter--amount" style="display:inline-block">
+										<span id="rd-firstAmount">5 000</span> 
+										- 
+										<span id="rd-secondAmount">40 000</span>
+									</div>
 		            				<i class="fas fa-ruble-sign" style="color:#5f5f5f"></i>
 		            			</div>
-		            			<div class="rd-description__counter--term">до 15 дней</div>
+		            			<div class="rd-description__counter--term">до <span>15</span> дней</div>
 		            			<a href="#" target="_blank" class="rd-selectedItem__button">
 				            		<button class="rd-selectedItem__button--select">Перейти</button>
 				            	</a>
@@ -211,10 +228,14 @@
 		            		<div class="rd-description__counter">
 		            			<div class="rd-description__counter--rate">0,08 % в день</div>
 		            			<div class="rd-description__counter--amount">
-		            				<span>1 000 - 6 000</span>
+									<div id ="rd-description__counter--amount" style="display:inline-block">
+										<span id="rd-firstAmount">1 000</span> 
+										- 
+										<span id="rd-secondAmount">6 000</span>
+									</div>
 		            			    <i class="fas fa-ruble-sign" style="color:#5f5f5f"></i>
 		            		    </div>
-		            			<div class="rd-description__counter--term">до 14 дней</div>
+		            			<div class="rd-description__counter--term">до <span>14</span> дней</div>
 		            			<a href="#" target="_blank" class="rd-selectedItem__button">
 				            		<button class="rd-selectedItem__button--select">Перейти</button>
 				            	</a>
@@ -251,10 +272,14 @@
 		            		<div class="rd-description__counter">
 		            			<div class="rd-description__counter--rate">0,55 % в день</div>
 		            			<div class="rd-description__counter--amount">
-		            				<span>5 000 - 30 000</span>
+									<div id ="rd-description__counter--amount" style="display:inline-block">
+										<span id="rd-firstAmount">5 000</span> 
+										- 
+										<span id="rd-secondAmount">30 000</span>
+									</div>
 		            				<i class="fas fa-ruble-sign" style="color:#5f5f5f"></i>
 		            			</div>
-		            			<div class="rd-description__counter--term">до 30 дней</div>
+		            			<div class="rd-description__counter--term">до <span>30</span> дней</div>
 		            			<a href="#" target="_blank" class="rd-selectedItem__button">
 				            		<button class="rd-selectedItem__button--select">Перейти</button>
 				            	</a>
@@ -275,7 +300,7 @@
 		                                <p>Отсрочка</p>
 		                                <p>Штрафы</p>
 		                                <p>Место заключения договора: онлайн, в офисе</p>
-		                                <a href="#" class="rd-details-learnMore">Подробно</a>  
+		                                <a href="#" class="rd-details-learnMore">Подробно</a>  s
 	                                </div>          
 	                            </div>
 		            		</div>
